# ecommerce-data-pipeline

./: .editorconfig  .env.example  .eslintrc.js  .github_refresh.txt  .gitignore  CHANGELOG.md  README.md  aws-resources.env  challenge.md  deploy-lambda.sh  docker-compose.yml  ecs-task-medusajs.json  ecs-task-nestjs.json  ecs-task-pimcore.json  ecs-task-policy.json  init-localstack.sh  lambda-policy.json  s3-notification.json  send-event.sh  setup.ps1  setup.sh  shein_products.json  test-product.json
.git_backup/: FETCH_HEAD  ORIG_HEAD  config  index
.git_backup/refs/heads/: temp-default
docs/: ASSUMPTIONS.md  HOW_TO_RUN.md  architecture-c4.md  aws-deployment.md  data-model.md  sequence-diagram.md
infrastructure/aws/lambda/: serverless.yml
infrastructure/docker/: init-db.sql  localstack-init.sh
pimcore/: nginx.conf
pimcore/config/: product-class.json
scripts/: build-lambda.sh  deploy-aws.ps1  test-e2e.ps1  test-e2e.sh
services/ingestion-lambda/: Dockerfile  pyproject.toml  requirements.txt
services/ingestion-lambda/src/: __init__.py  exceptions.py  handler.py  handler_minimal.py  logging_config.py  models.py  retry.py  transformer.py
services/ingestion-lambda/tests/: __init__.py  conftest.py  test_exceptions.py  test_retry.py  test_transformer.py
services/medusa-backend/: Dockerfile  medusa-config.js  package.json
services/nestjs-integration/: .env.example  Dockerfile  Dockerfile.dev  package-lock.json  package.json  tsconfig.json
services/pimcore/: Dockerfile  docker-entrypoint.sh  nginx.conf  package.json  server.js  supervisord.conf
(+33 files in other folders)
